--- a/Eclipse_WorkSpace/RevisãoPOO/.project
+++ b/Eclipse_WorkSpace/RevisãoPOO/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RevisoPOO</name>
+	<name>RevisãoPOO</name>
 	<comment></comment>
 	<projects>
 	</projects>
